src/lex/lexing/snapshots/lex__lex__lexers__detokenizer__tests__120-annotations-simple.snap
---
source: src/lex/lexers/detokenizer.rs
expression: detokenized
---
Simple Annotations Test {{paragraph}}

This document tests the marker form of annotations. {{paragraph}}

:: note ::

Regular paragraph between annotations. {{paragraph}}

:: warning severity=high ::

Another paragraph. {{paragraph}}

:: todo priority=urgent ::

:: author name="Jane Doe" ::

Boolean parameter test {{paragraph}}

:: debug ::

:: experimental enabled ::

Namespaced labels test {{paragraph}}

:: python.typing ::

:: org.example.custom param="value" ::

End of simple annotations test. {{paragraph}}
