src/lex/lexing/snapshots/lex__lex__lexers__detokenizer__tests__150-verbatim-blocks-no-content.snap
---
source: src/lex/lexers/detokenizer.rs
expression: detokenized
---
Verbatim Blocks No-Content Test {{paragraph}}

This document tests the marker form of foreign blocks (no embedded content). {{paragraph}}

Image Reference:

:: image type=jpg, src=sunset.jpg :: As the sun sets, we see a colored sea bed.

Binary File Reference:

:: binary type=pdf, src=document.pdf :: Important document for review.

Video Reference:

:: video type=mp4, src=demo.mp4, duration=120 :: Product demonstration video.

Audio Reference:

:: audio type=wav, src=recording.wav :: Meeting recording from yesterday.

Archive Reference:

:: archive type=zip, src=backup.zip, size=2.5MB :: Database backup from last week.

External Link:

:: link url=https://example.com :: External documentation reference.

API Endpoint:

:: api method=GET, url=/api/users :: Retrieve all users endpoint.

Database Table:

:: table name=users, schema=public :: User accounts table definition.

Environment Variable:

:: env var=DATABASE_URL :: Database connection string.

Secret Reference:

:: secret name=api_key :: API authentication key.

End of no-content foreign blocks test. {{paragraph}}
